# kr-data-organization

./: CMakeLists.txt  README.md
docs/: .~lock.TZ.docx#  TZ.docx
src/: examination.cpp  examination.h  group.cpp  group.h  list.cpp  list.h  main.cpp  professor.cpp  professor.h
